@@ -1,27 +1,24 @@
 package tacos.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import tacos.data.Ingredient;
 import tacos.data.Taco;
 import tacos.data.TacoOrder;
+import tacos.repository.IngredientRepository;
+import tacos.repository.OrderRepository;
 
 @Service
 public class TacoService {
-    private static final List<Ingredient> INGREDIENTS = List.of(
-            new Ingredient("FLTO", "Flour Tortilla", Ingredient.Type.WRAP),
-            new Ingredient("COTO", "Corn Tortilla", Ingredient.Type.WRAP),
-            new Ingredient("GRBF", "Ground Beef", Ingredient.Type.PROTEIN),
-            new Ingredient("CARN", "Carnitas", Ingredient.Type.PROTEIN),
-            new Ingredient("TMTO", "Diced Tomatoes", Ingredient.Type.VEGGIES),
-            new Ingredient("LETC", "Lettuce", Ingredient.Type.VEGGIES),
-            new Ingredient("CHD", "Cheddar", Ingredient.Type.CHEESE),
-            new Ingredient("JACK", "Monterrey Jack", Ingredient.Type.CHEESE),
-            new Ingredient("SLSA", "Salsa", Ingredient.Type.SAUCE),
-            new Ingredient("SRCR", "Sour Cream", Ingredient.Type.SAUCE)
-    );
+    @Autowired
+    private IngredientRepository ingredientRepository;
+    @Autowired
+    private OrderRepository orderRepository;
 
     public TacoOrder order() {
         return new TacoOrder();
@@ -31,19 +28,21 @@ public class TacoService {
         return new Taco();
     }
 
+    public TacoOrder save(TacoOrder order) {
+        return orderRepository.save(order);
+    }
+
     public List<Ingredient> getIngredients() {
-        return INGREDIENTS;
+        return StreamSupport.stream(ingredientRepository.findAll().spliterator(), false)
+                .collect(Collectors.toList());
     }
 
     public List<Ingredient> getIngredients(Ingredient.Type type) {
-        return INGREDIENTS.stream()
-                .filter(ingredient -> ingredient.getType() == type)
-                .toList();
+        return StreamSupport.stream(ingredientRepository.findByType(type).spliterator(), false)
+                .collect(Collectors.toList());
     }
 
     public Ingredient getById(String id) {
-        return INGREDIENTS.stream()
-                .filter(ingredient -> ingredient.getId().equals(id)).findFirst()
-                .orElse(null);
+        return ingredientRepository.findById(id).orElse(null);
     }
 }
